--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,8 @@
 minSdk = "23"
 targetSdk = "33"
 compileSdk = "33"
-versionCode = "1"
-versionName = "1.0"
+versionCode = "5"
+versionName = "1.2.1"
 
 [libraries]
 kiwi-icons = "kiwi.orbit.compose:icons:0.18.0"
@@ -32,12 +32,6 @@ androidx-room-runtime = "androidx.room:room-runtime:2.4.2"
 androidx-room-ktx = "androidx.room:room-runtime:2.4.2"
 androidx-room-compiler = "androidx.room:room-runtime:2.4.2"
 
-androidx-test-coreKtx = "androidx.test:core-ktx:1.4.0"
-androidx-test-core = "androidx.test:core:1.4.0"
-androidx-test-core-junitKtx = "androidx.test.ext:junit-ktx:1.1.3"
-androidx-test-runner = "androidx.test:runner:1.4.0"
-androidx-test-rules = "androidx.test:rules:1.4.0"
-
 google-material = "com.google.android.material:material:1.6.1"
 google-hilt = "com.google.dagger:hilt-android:2.42"
 
@@ -47,15 +41,31 @@ accompanist-pager = "com.google.accompanist:accompanist-pager:0.24.8-beta"
 mockk = "io.mockk:mockk:1.12.5"
 mockk-android = "io.mockk:mockk-android:1.12.5"
 
-junit = "junit:junit:4.13.2"
-
-robolectric = "org.robolectric:robolectric:4.8.2"
-
 coil = "io.coil-kt:coil-compose:2.1.0"
 
 firebase-crashlytics = "com.google.firebase:firebase-crashlytics:18.2.9"
 firebase-analytics = "com.google.firebase:firebase-crashlytics:18.2.9"
 
+retrofit-core = "com.squareup.retrofit2:retrofit:2.9.0"
+retrofit-logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.10.0"
+
+moshi-core = "com.squareup.moshi:moshi-kotlin:1.13.0"
+moshi-converter = "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+coroutines-core = 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+coroutines-android = 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+junit = 'junit:junit:4.13.2'
+robolectric = 'org.robolectric:robolectric:4.8.1'
+hilt-testing = 'com.google.dagger:hilt-android-testing:2.42'
+truth = "com.google.truth:truth:1.1.3"
+
+junit-android = 'androidx.test.ext:junit:1.1.3'
+espresso = 'androidx.test.espresso:espresso-core:3.4.0'
+compose-test = "androidx.compose.ui:ui-test-junit4:1.3.0-alpha01"
+
+tooling = "androidx.compose.ui:ui-tooling:1.3.0-alpha01"
+leakcanary = "com.squareup.leakcanary:leakcanary-android:2.9.1"
 
 [bundles]
 kiwi = [
@@ -86,12 +96,6 @@ firebase = [
     "firebase-analytics"
 ]
 
-androidx-androidTests = [
-    "androidx-test-coreKtx",
-    "androidx-test-runner", "androidx-test-rules",
-    "androidx-test-core-junitKtx"
-]
-
 androidx-compose = [
     "androidx-compose-foundation",
     "accompanist-systemuicontroller",
@@ -105,4 +109,37 @@ androidx-compose = [
     "androidx-compose-constraintlayout",
     "androidx-compose-raamcosta-destinations",
     "androidx-compose-raamcosta-destinations-animations"
+]
+
+retrofit = [
+    "retrofit-core",
+    "retrofit-logging-interceptor"
+]
+
+moshi = [
+    "moshi-core",
+    "moshi-converter"
+]
+
+coroutines = [
+    "coroutines-core",
+    "coroutines-android"
+]
+
+test = [
+    "junit",
+    "robolectric",
+    "hilt-testing",
+    "truth",
+]
+
+android-test = [
+    "junit-android",
+    "espresso",
+    "compose-test",
+]
+
+debug-tools = [
+    "tooling",
+    "leakcanary"
 ]
