--- a/testomania/build.gradle
+++ b/testomania/build.gradle
@@ -84,45 +84,27 @@ android {
 }
 
 dependencies {
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
-
-    // Serialization
-    implementation("com.squareup.moshi:moshi-kotlin:1.13.0")
-    kapt("com.squareup.moshi:moshi-kotlin-codegen:1.13.0")
-    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-
-    ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.4-beta'
-    implementation(libs.bundles.kiwi)
-
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-
-    //Dagger - Hilt
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     implementation(libs.bundles.androidx)
-    kapt(libs.androidx.room.compiler)
-
-    // Testing
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.robolectric:robolectric:4.8.1'
-    testImplementation group: 'com.google.dagger', name: 'hilt-android-testing', version: '2.42'
-    kaptTest 'com.google.dagger:hilt-android-compiler:2.42'
-    testImplementation "com.google.truth:truth:1.1.3"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
-
+    implementation(libs.bundles.kiwi)
     implementation(libs.bundles.google)
     implementation(libs.coil)
     implementation(libs.bundles.firebase)
     implementation(libs.bundles.androidx.compose)
+    implementation(libs.bundles.retrofit)
+    implementation(libs.bundles.moshi)
+    implementation(libs.bundles.coroutines)
+
+    testImplementation(libs.bundles.test)
+    androidTestImplementation(libs.bundles.android.test)
+    debugImplementation(libs.bundles.debug.tools)
+
+    kapt(libs.androidx.room.compiler)
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
+    kapt "com.google.dagger:hilt-android-compiler:2.42"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.4.4-beta'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.42'
 
 }
 
