--- a/.github/workflows/gradle-bundleRelease.yml
+++ b/.github/workflows/gradle-bundleRelease.yml
@@ -30,7 +30,7 @@ jobs:
       - name: 'Build native executables'
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: bundleRelease
+          arguments: bundleRelease assembleRelease
         env:
           KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
           KEYSTORE_PRIVATE_KEY: ${{ secrets.KEYSTORE_PRIVATE_KEY }}
@@ -41,3 +41,4 @@ jobs:
           name: artifacts
           path: |
             ./testomania/build/outputs/bundle/release/*
+            ./testomania/build/outputs/apk/release/*
