--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ androidx-compose-ui = "androidx.compose.ui:ui:1.3.0-rc01"
 androidx-compose-material = "androidx.compose.material:material:1.3.0-rc01"
 androidx-compose-material-icons-extended = "androidx.compose.material:material-icons-extended:1.3.0-rc01"
 androidx-compose-constraintlayout = "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+androidx-tooling = "androidx.compose.ui:ui-tooling:1.3.0-rc01"
+androidx-tooling-preview = "androidx.compose.ui:ui-tooling-preview:1.2.1"
 
 raamcosta-destinations = 'io.github.raamcosta.compose-destinations:core:1.4.4-beta'
 raamcosta-destinations-animations = 'io.github.raamcosta.compose-destinations:animations-core:1.4.4-beta'
@@ -70,7 +72,6 @@ junit-android = 'androidx.test.ext:junit:1.1.3'
 espresso = 'androidx.test.espresso:espresso-core:3.4.0'
 compose-test = "androidx.compose.ui:ui-test-junit4:1.3.0-rc01"
 
-tooling = "androidx.compose.ui:ui-tooling:1.3.0-rc01"
 leakcanary = "com.squareup.leakcanary:leakcanary-android:2.9.1"
 
 [bundles]
@@ -113,6 +114,7 @@ androidx-compose = [
     "androidx-compose-viewmodel-lifecycle",
     "androidx-compose-navigation-hilt",
     "androidx-compose-constraintlayout",
+    "androidx-tooling-preview",
     "raamcosta-destinations",
     "raamcosta-destinations-animations"
 ]
@@ -146,6 +148,6 @@ android-test = [
 ]
 
 debug-tools = [
-    "tooling",
+    "androidx-tooling",
     "leakcanary"
 ]
