--- a/testomania/src/main/AndroidManifest.xml
+++ b/testomania/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data
+<!--            <meta-data
                 android:name="android.app.shortcuts"
-                android:resource="@xml/shortcuts" />
+                android:resource="@xml/shortcuts" />-->
 
         </activity>
     </application>
