--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ raamcosta-destinations-ksp = 'io.github.raamcosta.compose-destinations:ksp:1.4.4
 
 androidx-lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 androidx-compose-activity = "androidx.activity:activity-compose:1.6.1"
+androidx-compose-material3 = "androidx.compose.material3:material3:1.0.1"
 androidx-datastore-preferences = "androidx.datastore:datastore-preferences:1.0.0"
 androidx-datastore-core = "androidx.datastore:datastore-core:1.0.0"
 androidx-datastore = "androidx.datastore:datastore:1.0.0"
@@ -83,6 +84,7 @@ kiwi = [
 androidx = [
     "androidx-lifecycle",
     "androidx-compose-activity",
+    "androidx-compose-material3",
     "androidx-datastore-preferences",
     "androidx-datastore-core",
     "androidx-datastore",
