--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -51,7 +51,9 @@ mockk-android = "io.mockk:mockk-android:1.13.4"
 coil = "io.coil-kt:coil-compose:2.3.0"
 
 firebase-crashlytics = "com.google.firebase:firebase-crashlytics:18.3.6"
-firebase-analytics = "com.google.firebase:firebase-crashlytics:18.3.6"
+
+firebase-analytics = "com.google.firebase:firebase-bom:31.4.0"
+firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 
 retrofit-core = "com.squareup.retrofit2:retrofit:2.9.0"
 retrofit-logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.10.0"
@@ -100,8 +102,7 @@ google = [
 ]
 
 firebase = [
-    "firebase-crashlytics",
-    "firebase-analytics"
+    "firebase-crashlytics"
 ]
 
 androidx-compose = [
