--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ raamcosta-destinations-ksp = 'io.github.raamcosta.compose-destinations:ksp:1.4.4
 
 androidx-lifecycle = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 androidx-compose-activity = "androidx.activity:activity-compose:1.6.1"
+androidx-compose-material3 = "androidx.compose.material3:material3:1.0.1"
 androidx-datastore-preferences = "androidx.datastore:datastore-preferences:1.0.0"
 androidx-datastore-core = "androidx.datastore:datastore-core:1.0.0"
 androidx-datastore = "androidx.datastore:datastore:1.0.0"
@@ -49,8 +50,10 @@ mockk-android = "io.mockk:mockk-android:1.13.5"
 
 coil = "io.coil-kt:coil-compose:2.3.0"
 
-firebase-crashlytics = "com.google.firebase:firebase-crashlytics:18.3.7"
-firebase-analytics = "com.google.firebase:firebase-crashlytics:18.3.7"
+firebase-crashlytics = "com.google.firebase:firebase-crashlytics:18.3.6"
+
+firebase-analytics = "com.google.firebase:firebase-bom:31.4.0"
+firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 
 retrofit-core = "com.squareup.retrofit2:retrofit:2.9.0"
 retrofit-logging-interceptor = "com.squareup.okhttp3:logging-interceptor:4.11.0"
@@ -83,6 +86,7 @@ kiwi = [
 androidx = [
     "androidx-lifecycle",
     "androidx-compose-activity",
+    "androidx-compose-material3",
     "androidx-datastore-preferences",
     "androidx-datastore-core",
     "androidx-datastore",
@@ -98,8 +102,7 @@ google = [
 ]
 
 firebase = [
-    "firebase-crashlytics",
-    "firebase-analytics"
+    "firebase-crashlytics"
 ]
 
 androidx-compose = [
